adaboost-mpi/src/167143.err
make: Warning: File 'Makefile' has modification time 1.6 s in the future
make[1]: Warning: File 'CMakeFiles/Makefile2' has modification time 1.4 s in the future
make[2]: Warning: File 'CMakeFiles/communication_lib.dir/build.make' has modification time 1.4 s in the future
make[2]: Warning: File 'CMakeFiles/data_lib.dir/build.make' has modification time 1.4 s in the future
make[2]: warning:  Clock skew detected.  Your build may be incomplete.
make[2]: warning:  Clock skew detected.  Your build may be incomplete.
make[2]: Warning: File 'CMakeFiles/data_lib.dir/build.make' has modification time 1.3 s in the future
make[2]: Warning: File 'CMakeFiles/communication_lib.dir/build.make' has modification time 1.3 s in the future
make[2]: warning:  Clock skew detected.  Your build may be incomplete.
make[2]: warning:  Clock skew detected.  Your build may be incomplete.
make[2]: Warning: File '/beegfs/home/echiavazza/unito-scpd/adaboost-mpi/obj/libcommunication_lib.a' has modification time 0.82 s in the future
/beegfs/home/echiavazza/unito-scpd/adaboost-mpi/src/main.cpp: In function ‘int main(int, char**)’:
/beegfs/home/echiavazza/unito-scpd/adaboost-mpi/src/main.cpp:190:13: error: expected ‘}’ at end of input
  190 |     return 0;
      |             ^
/beegfs/home/echiavazza/unito-scpd/adaboost-mpi/src/main.cpp:9:33: note: to match this ‘{’
    9 | int main(int argc, char** argv) {
      |                                 ^
make[2]: *** [CMakeFiles/adaboost-mpi.dir/build.make:76: CMakeFiles/adaboost-mpi.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/adaboost-mpi.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
terminate called after throwing an instance of 'std::out_of_range'
  what():  Mat::operator(): index out of bounds
terminate called after throwing an instance of 'std::out_of_range'
[broadwell-023:2283900] *** Process received signal ***
[broadwell-023:2283900] Signal: Aborted (6)
[broadwell-023:2283900] Signal code:  (-6)
  what():  Mat::operator(): index out of bounds
[broadwell-023:2283900] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x43090)[0x7fe2f0f0e090]
[broadwell-026:4129115] *** Process received signal ***
[broadwell-023:2283900] [ 1] /lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7fe2f0f0e00b]
[broadwell-026:4129115] Signal: Aborted (6)
[broadwell-026:4129115] Signal code:  (-6)
[broadwell-023:2283900] [ 2] /lib/x86_64-linux-gnu/libc.so.6(abort+0x12b)[0x7fe2f0eed859]
[broadwell-026:4129115] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x43090)[0x7f24a525f090]
[broadwell-023:2283900] [ 3] /lib/x86_64-linux-gnu/libstdc++.so.6(+0x9e911)[0x7fe2f12c5911]
[broadwell-026:4129115] [ 1] /lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7f24a525f00b]
[broadwell-023:2283900] [ 4] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa38c)[0x7fe2f12d138c]
[broadwell-026:4129115] [ 2] /lib/x86_64-linux-gnu/libc.so.6(abort+0x12b)[0x7f24a523e859]
[broadwell-023:2283900] [ 5] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa3f7)[0x7fe2f12d13f7]
[broadwell-026:4129115] [ 3] /lib/x86_64-linux-gnu/libstdc++.so.6(+0x9e911)[0x7f24a5616911]
[broadwell-023:2283900] [ 6] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa6a9)[0x7fe2f12d16a9]
[broadwell-026:4129115] [ 4] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa38c)[0x7f24a562238c]
[broadwell-023:2283900] [ 7] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0xae8a)[0x559c48b31e8a]
[broadwell-026:4129115] [ 5] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa3f7)[0x7f24a56223f7]
[broadwell-023:2283900] [ 8] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x11ea9)[0x559c48b38ea9]
[broadwell-026:4129115] [ 6] /lib/x86_64-linux-gnu/libstdc++.so.6(+0xaa6a9)[0x7f24a56226a9]
[broadwell-023:2283900] [ 9] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x1e4ed)[0x559c48b454ed]
[broadwell-026:4129115] [ 7] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0xae8a)[0x55594cd92e8a]
[broadwell-023:2283900] [10] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x16ec8)[0x559c48b3dec8]
[broadwell-026:4129115] [ 8] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x11ea9)[0x55594cd99ea9]
[broadwell-023:2283900] [11] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0xfd94)[0x559c48b36d94]
[broadwell-026:4129115] [ 9] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x1e4ed)[0x55594cda64ed]
[broadwell-023:2283900] [12] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x9729)[0x559c48b30729]
[broadwell-026:4129115] [10] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x16ec8)[0x55594cd9eec8]
[broadwell-023:2283900] [13] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3)[0x7fe2f0eef083]
[broadwell-026:4129115] [11] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0xfd94)[0x55594cd97d94]
[broadwell-023:2283900] [14] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x871e)[0x559c48b2f71e]
[broadwell-026:4129115] [12] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x9729)[0x55594cd91729]
[broadwell-023:2283900] *** End of error message ***
[broadwell-026:4129115] [13] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3)[0x7f24a5240083]
[broadwell-026:4129115] [14] /beegfs/home/echiavazza/unito-scpd/adaboost-mpi/bin/./adaboost-mpi(+0x871e)[0x55594cd9071e]
[broadwell-026:4129115] *** End of error message ***
srun: error: broadwell-023: task 77: Aborted (core dumped)
srun: error: broadwell-026: task 215: Aborted (core dumped)
slurmstepd: error:  mpi/pmix_v3: _errhandler: broadwell-023 [2]: pmixp_client_v2.c:211: Error handler invoked: status = -25, source = [slurm.pmix.167143.0:77]
srun: Job step aborted: Waiting up to 32 seconds for job step to finish.
slurmstepd: error: *** STEP 167143.0 ON broadwell-021 CANCELLED AT 2025-03-28T23:01:52 ***
srun: error: broadwell-024: tasks 108-143: Killed
srun: error: broadwell-030: tasks 324-359: Killed
srun: error: broadwell-023: tasks 72-76,78-107: Killed
srun: error: broadwell-029: tasks 288-323: Killed
srun: error: broadwell-021: tasks 0-35: Killed
srun: error: broadwell-028: tasks 252-287: Killed
srun: error: broadwell-025: tasks 144-179: Killed
srun: error: broadwell-026: tasks 180-214: Killed
srun: error: broadwell-022: tasks 36-71: Killed
srun: error: broadwell-027: tasks 216-251: Killed
